logs/coop-agenda.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coop_agenda'...
Listing './lib/python3.5/site-packages/coop_agenda/conf'...
Compiling './lib/python3.5/site-packages/coop_agenda/conf/__init__.py'...
***   File "./lib/python3.5/site-packages/coop_agenda/conf/__init__.py", line 19
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coop_agenda/fixtures'...
Listing './lib/python3.5/site-packages/coop_agenda/locale'...
Listing './lib/python3.5/site-packages/coop_agenda/locale/de'...
Listing './lib/python3.5/site-packages/coop_agenda/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/coop_agenda/locale/en'...
Listing './lib/python3.5/site-packages/coop_agenda/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/coop_agenda/locale/fr'...
Listing './lib/python3.5/site-packages/coop_agenda/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/coop_agenda/migrations'...
Listing './lib/python3.5/site-packages/coop_agenda/static'...
Listing './lib/python3.5/site-packages/coop_agenda/static/css'...
Listing './lib/python3.5/site-packages/coop_agenda/templates'...
Compiling './lib/python3.5/site-packages/coop_agenda/tests.py'...
***   File "./lib/python3.5/site-packages/coop_agenda/tests.py", line 98
    print out
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coop_agenda/utils.py'...
***   File "./lib/python3.5/site-packages/coop_agenda/utils.py", line 90
    print self.title
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coop_agenda-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
